# shaderloom

./: .luarc.json  Cargo.toml  LICENSE  README.md
crates/lua_binding_macros/: Cargo.toml
crates/lua_binding_macros/src/: lib.rs
crates/shaderloom/: Cargo.toml  build.rs
crates/shaderloom/src/: globutils.rs  lib.rs  luaexec.rs  main.rs  naga_parse.rs
crates/shaderloom/src/lua/: _defs.lua  _init.lua  _termcolor.lua  chunker.lua  info.lua  log.lua  miniclass.lua  parse.lua
crates/shaderloom/src/lua/analysis/: bindings.lua  naga.lua  unify.lua
crates/shaderloom/src/lua/analysis/unify/: bindings.lua  structs.lua  unify.lua  vertex.lua
crates/shaderloom/src/lua/cli/: exec_script.lua
crates/shaderloom/src/lua/codegen/: pygen.lua
crates/shaderloom/src/lua/config/: declarative.lua
crates/shaderloom/src/lua/preprocess/: chunker.lua  preprocessor.lua
crates/shaderloom/src/lua/targets/: raw.lua
crates/shaderloom/src/lua/targets/python/: xgpu.lua
crates/shaderloom/src/lua/targets/rust/: wgpu.lua
crates/shaderloom/src/lua/tests/: dev.lua
crates/shaderloom/src/lua/utils/: common.lua  deepeq.lua  deepprint.lua  fileio.lua  stringmanip.lua
crates/shaderloom/tests/: integration_test.rs
examples/: build_rs_example.rs
examples/bare_shaders/: matcap.wgsl
examples/raw_bundle/: loom.lua  triangle.wgsl
examples/wgpu_bundle/: loom.lua  triangle.wgsl
examples/xgpu_bundle/: loom.lua  matcap.wgsl  triangle.wgsl
