[package]
name = "shaderloom"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
mlua = { workspace = true }
bstr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

naga = {version="24.0.0", features=["serialize", "wgsl-in"]}
glob = "0.3.1"
clap = {version = "4.5.22", features = ["derive"] }

lua_binding_macros = {path = "../lua_binding_macros"}

[build-dependencies]
walkdir = "2.5.0"
